<resources>
    <string name="app_name">My Gallery</string>
    <string name="main_button_text">Add Photo</string>
    <string name="main_empty_text">You can add some photos</string>
    <string name="dialog_title">Add photo from:</string>
    <string name="dialog_choose_gallery">Gallery</string>
    <string name="dialog_choose_camera">Camera</string>
    <string name="take_photo">Take a photo</string>
    <string name="delete_msg">Delete item successfully</string>
    <string name="error_msg">Sorry, cannot reception this photo</string>
    <string name="No_dialog_msg">No</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_content">Are you sure?</string>
</resources>