<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:padding="4dp"
        android:text="@string/dialog_title"
        android:textColor="@color/almostBlack"
        android:textSize="14sp" />

    <Button
        android:id="@+id/dialogChooseGalleryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_shape"
        android:text="@string/dialog_choose_gallery" />

    <Button
        android:id="@+id/dialogChooseCameraBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_shape"
        android:text="@string/dialog_choose_camera" />

</LinearLayout>